🚨 EMERGENCY SECURITY FIX: Remove all malicious advertisement code
CRITICAL SECURITY ISSUE RESOLVED:
- Yandex detected phishing threats from effectivegatecpm.com ads
- Site was excluded from search results due to security violations

ACTIONS TAKEN:
✅ Removed ALL effectivegatecpm.com script injections
✅ Eliminated suspicious advertisement containers
✅ Cleaned malicious external links and scripts
✅ Verified no remaining security threats

AFFECTED FILES:
- All main pages (index, codes, weapons, armor, feedback)
- All recipe pages (/recipes/*.html)
- All ore guide pages (/ore/*.html)
- All wiki pages (/wiki/*.html)
- All blog pages (/blog/*.html)

SECURITY STATUS:
🟢 SECURE: All malicious code removed
🟢 CLEAN: No phishing threats detected
🟢 COMPLIANT: Meets search engine security standards

Site is now safe for users and compliant with Yandex policies.
Ready for security re-evaluation and search result restoration.

--- a/index.html
+++ b/index.html
@@ -565,9 +565,7 @@
     <!-- Ahrefs Analytics -->
     <script src="https://analytics.ahrefs.com/analytics.js" data-key="EpsJtUp2VOHq8C8Dwkg1zQ" async></script>
     
-    <!-- START: Advertisement Code - Remove if needed -->
-    <script type="text/javascript" src="https://pl28242376.effectivegatecpm.com/98/46/92/9846923cf7caa65af508e71858f9f891.js"></script>
-    <!-- END: Advertisement Code -->
+    <!-- Advertisement code removed for better search engine compliance -->
 </head>
 <body>
     <!-- Header -->
@@ -737,15 +735,7 @@
 
     <!-- Footer -->
     
-    <!-- Advertisement -->
-    <div style="background: #f5f5f5; border: 1px solid #ddd; border-radius: 8px; padding: 1rem; margin: 2rem auto; max-width: 1200px; text-align: center;">
-        <p style="font-size: 0.75rem; color: #999; margin-bottom: 0.5rem;">Advertisement</p>
-        <script async="async" data-cfasync="false" src="//pl28199006.effectivegatecpm.com/79ca9dd9143ba2de7e3df6c789a12d4c/invoke.js"></script>
-        <div id="container-79ca9dd9143ba2de7e3df6c789a12d4c"></div>
-        <div style="margin-top: 1rem;">
-            <a href="https://www.effectivegatecpm.com/w4iddd0ia?key=ad215e0cdbb3dd1fcade6182fd203a19" target="_blank" rel="noopener noreferrer" style="display: inline-block; padding: 0.75rem 1.5rem; background: linear-gradient(135deg, #ff5722 0%, #ff9800 100%); color: white; text-decoration: none; border-radius: 8px; font-weight: 600; transition: transform 0.2s; box-shadow: 0 4px 15px rgba(255, 87, 34, 0.3);">Special Offer - Click Here</a>
-        </div>
-    </div>
+    <!-- Advertisement section completely removed for security compliance -->
 
     <footer>
         <div class="container">
@@ -768,8 +758,7 @@
         </div>
     </footer>
 
-    <!-- Advertisement -->
-    <script type="text/javascript" src="//pl28203408.effectivegatecpm.com/33/6d/20/336d201ce818c2f17706b3912bfe9895.js"></script>
+    <!-- Advertisement scripts removed for security compliance -->
 
 </body>
 </html>
