--- a/feedback.html
+++ b/feedback.html
@@ -326,9 +326,7 @@
     <!-- EmailJS SDK -->
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
     
-    <!-- START: Advertisement Code - Remove if needed -->
-    <script type="text/javascript" src="https://pl28242376.effectivegatecpm.com/98/46/92/9846923cf7caa65af508e71858f9f891.js"></script>
-    <!-- END: Advertisement Code -->
+    <!-- Advertisement code removed for security compliance -->
 </head>
 <body>
     <header>
@@ -441,12 +439,7 @@
     </div>
 
     
-    <!-- Advertisement -->
-    <div style="background: #f5f5f5; border: 1px solid #ddd; border-radius: 8px; padding: 1rem; margin: 2rem auto; max-width: 1200px; text-align: center;">
-        <p style="font-size: 0.75rem; color: #999; margin-bottom: 0.5rem;">Advertisement</p>
-        <script async="async" data-cfasync="false" src="//pl28199006.effectivegatecpm.com/79ca9dd9143ba2de7e3df6c789a12d4c/invoke.js"></script>
-        <div id="container-79ca9dd9143ba2de7e3df6c789a12d4c"></div>
-    </div>
+    <!-- Advertisement section removed for security compliance -->
 
     <footer>
         <div class="container">
@@ -550,8 +543,7 @@
                 submitBtn.textContent = 'Send Feedback';
             }
         });
-    </script>    <!-- Advertisement -->
-    <script type="text/javascript" src="//pl28203408.effectivegatecpm.com/33/6d/20/336d201ce818c2f17706b3912bfe9895.js"></script>
+    </script>    <!-- Advertisement scripts removed for security compliance -->
 
 </body>
 </html>
