--- a/recipes/generate-recipes.html
+++ b/recipes/generate-recipes.html
@@ -7,10 +7,7 @@
     <link rel="canonical" href="https://forge-calculator.com/recipes/generate-recipes.html">
     <title>Generate Recipe Database</title>
     
-    <!-- START: Advertisement Code - Remove if needed -->
-    <script type="text/javascript" src="https://pl28242376.effectivegatecpm.com/98/46/92/9846923cf7caa65af508e71858f9f891.js"></script>
-    <!-- END: Advertisement Code -->
-</head>
+    <!-- Advertisement code removed for security compliance --></head>
 <body>
     <h1>Recipe Database Generator</h1>
     <button id="generateBtn">生成配方数据库</button>
