--- a/recipes/recipe-database-ui.html
+++ b/recipes/recipe-database-ui.html
@@ -9,10 +9,7 @@
     <link rel="canonical" href="https://forge-calculator.com/recipes/recipe-database-ui.html">
     <title>Recipe Database UI - The Forge Calculator</title>
     
-    <!-- START: Advertisement Code - Remove if needed -->
-    <script type="text/javascript" src="https://pl28242376.effectivegatecpm.com/98/46/92/9846923cf7caa65af508e71858f9f891.js"></script>
-    <!-- END: Advertisement Code -->
-    
+    <!-- Advertisement code removed for security compliance -->    
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
