--- a/recipes/recipe-viewer.html
+++ b/recipes/recipe-viewer.html
@@ -7,10 +7,7 @@
     <link rel="canonical" href="https://forge-calculator.com/recipes/recipe-viewer.html">
     <title>The Forge Recipe Database Viewer</title>
     
-    <!-- START: Advertisement Code - Remove if needed -->
-    <script type="text/javascript" src="https://pl28242376.effectivegatecpm.com/98/46/92/9846923cf7caa65af508e71858f9f891.js"></script>
-    <!-- END: Advertisement Code -->
-    
+    <!-- Advertisement code removed for security compliance -->    
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
         :root {
