--- a/weapons.html
+++ b/weapons.html
@@ -402,9 +402,7 @@
     <!-- Ahrefs Analytics -->
     <script src="https://analytics.ahrefs.com/analytics.js" data-key="EpsJtUp2VOHq8C8Dwkg1zQ" async></script>
     
-    <!-- START: Advertisement Code - Remove if needed -->
-    <script type="text/javascript" src="https://pl28242376.effectivegatecpm.com/98/46/92/9846923cf7caa65af508e71858f9f891.js"></script>
-    <!-- END: Advertisement Code -->
+    <!-- Advertisement code removed for security compliance -->
 </head>
 <body>
     <header>
@@ -896,23 +894,14 @@
     </div>
 
     
-    <!-- Advertisement -->
-    <div style="background: #f5f5f5; border: 1px solid #ddd; border-radius: 8px; padding: 1rem; margin: 2rem auto; max-width: 1200px; text-align: center;">
-        <p style="font-size: 0.75rem; color: #999; margin-bottom: 0.5rem;">Advertisement</p>
-        <script async="async" data-cfasync="false" src="//pl28199006.effectivegatecpm.com/79ca9dd9143ba2de7e3df6c789a12d4c/invoke.js"></script>
-        <div id="container-79ca9dd9143ba2de7e3df6c789a12d4c"></div>
-        <div style="margin-top: 1rem;">
-            <a href="https://www.effectivegatecpm.com/w4iddd0ia?key=ad215e0cdbb3dd1fcade6182fd203a19" target="_blank" rel="noopener noreferrer" style="display: inline-block; padding: 0.75rem 1.5rem; background: linear-gradient(135deg, #ff5722 0%, #ff9800 100%); color: white; text-decoration: none; border-radius: 8px; font-weight: 600; transition: transform 0.2s;">Special Offer - Click Here</a>
-        </div>
-    </div>
+    <!-- Advertisement section removed for security compliance -->
 
     <footer>
         <div class="container">
             <p>&copy; 2025 Forge Calculator. Not affiliated with Roblox or The Forge developers.</p>
             <p><a href="/">Home</a> | <a href="/wiki/">Wiki</a> | <a href="/weapons.html">Weapons</a> | <a href="/codes.html">Codes</a> | <a href="/privacy-policy.html">Privacy</a> | <a href="/terms-of-service.html">Terms</a></p>
         </div>
-    </footer>    <!-- Advertisement -->
-    <script type="text/javascript" src="//pl28203408.effectivegatecpm.com/33/6d/20/336d201ce818c2f17706b3912bfe9895.js"></script>
+    </footer>    <!-- Advertisement scripts removed for security compliance -->
 
 </body>
 </html>
